Projet GL/Projet_GL/src/test/deca/context/valid/increment2/var-named-int.deca
//Résultats : 4

//Hisotrique : cree le 09/01/2023

{
    int int = 3;

    int = int + 1;

    print(int);
}