Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/int-op-int-float.deca
// Cause : type_arith_op(float, int) = float

// Resultats : Ligne 15 b must be a float

// Historique : cree le 09/01/2023

{
    int a,b;
    float c;

    a = 2;
    c = 4.1;

    //Must be refused
    b = a + c;
}
